[package]
name = "sui-snapshot"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding = "3.0.4"
crc = "3.0.0"
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
bcs = "0.1.4"
byteorder = "1.4.3"
num_enum = "0.5.9"
tracing = "0.1.37"
bytes = "1.4.0"
tokio-stream = "0.1.14"
futures = "0.3.23"
backoff = "0.4.0"
object_store = "=0.5.4"
zstd = "0.12.3+zstd.1.5.2"
prometheus = "0.13.3"
fs_extra = "1.3.0"
typed-store.workspace = true
typed-store-derive.workspace = true
sui-types = { path = "../sui-types" }
sui-core = { path = "../sui-core" }
sui-storage = { path = "../sui-storage" }
sui-protocol-config = { path = "../sui-protocol-config" }
fastcrypto = { workspace = true, features = ["copy_key"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3.3.0"
